[PSPIEL-252] added custom params to appointment booking
